<resources>
    <string name="app_name">MiniGuide</string>
    <string name="unknown_error_message">Что-то непонятное происходит</string>
    <string name="remote_error_message">У них там что-то сломалось</string>
    <string name="network_error_message">У тебя тут что-то сломалось с сетью</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZXBpY3VzIiwiYSI6ImNrbzRubnJ1YjFremsycXBnczk0ZnV0NWYifQ.kR8J7q7vH7sqI9U5vdF-rA</string>
    <string name="start_point">Пункт отправления</string>
    <string name="end_point">Пункт назначения</string>
    <string name="choose_on_map_text">Выберите на карте</string>
    <string name="my_location_text">Мое положение</string>
    <string name="point_text">%1$s, %2$s</string>
    <string name="content_description">image</string>
    <string name="get_routes">Построить маршрут</string>
</resources>