<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/default_margin"
    android:orientation="vertical"
    tools:context=".ui.routes.RoutesFragment">

    <com.example.miniguide.ui.customViews.LocationTextView
        android:id="@+id/tvStartPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/start_point" />

    <com.example.miniguide.ui.customViews.LocationTextView
        android:id="@+id/tvEndPoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:hint="@string/end_point" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:background="@drawable/background_oval"
        android:contentDescription="@string/content_description"
        android:drawableStart="@drawable/ic_route"
        android:paddingHorizontal="@dimen/large_margin"
        android:paddingVertical="@dimen/very_small_margin"
        android:text="@string/get_routes"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/large_text_size" />

</LinearLayout>